# sonya_front

./: .gitignore  README.md  settings.gradle.kts
.cursor/rules/: common.mdc
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sonya-wake-up_en_android_v4_0_0.ppn  sonya_voice_responses.json
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
watch/firmware/: README.md
watch/firmware/sonya_watch/: CMakeLists.txt  Kconfig  README.md  monitor_capture.txt  monitor_output.txt  partitions.csv  read_serial.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
watch/firmware/sonya_watch/android/sonya_companion/: README.md
watch/firmware/sonya_watch/components/audio_cap/: CMakeLists.txt  Kconfig  audio_cap.c
watch/firmware/sonya_watch/components/protocol/: CMakeLists.txt  protocol.c
watch/firmware/sonya_watch/components/pull_stream/: CMakeLists.txt  pull_stream.c
watch/firmware/sonya_watch/components/rec_store/: CMakeLists.txt  rec_store.c
watch/firmware/sonya_watch/components/ui_lvgl/: CMakeLists.txt  ui_lvgl.c  ui_lvgl_gif.c  ui_lvgl_gif.h
watch/firmware/sonya_watch/components/ui_lvgl/include/: ui_lvgl.h
watch/firmware/sonya_watch/main/: CMakeLists.txt  Kconfig  app_main.c  idf_component.yml  status_screen.c  status_screen.h  status_ui.c  status_ui.h
watch/firmware/sonya_watch/tools/: monitor_capture_live.py
watch/firmware/waveshare_esp32s3_147/: README.md  sdkconfig.defaults
(+59 files in other folders)
